--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,16 @@
         "**/Thumbs.db": true,
         "**/.gitkeep": true
     },
+    // json 設定
+    "[json]": {
+        "editor.formatOnPaste": true,
+        "editor.formatOnType": true,
+        "editor.formatOnSave": true,
+        "editor.quickSuggestions": {
+            "strings": true
+        },
+        "editor.suggest.insertMode": "replace"
+    },
     // Java 設定
     "[java]": {
         "editor.suggest.snippetsPreventQuickSuggestions": false,
