add spring project

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
 				// 全角スペースの明示
 				"mosapride.zenkaku",
 				"oderwat.indent-rainbow",
-				"usernamehw.errorlens"
+				"usernamehw.errorlens",
+				"vmware.vscode-boot-dev-pack"
             ]
             // 設定項目は.vscode/settings.jsonに記入する
         }
