Revert "add spring project"
This reverts commit e32a10bd519868e09148ef8112e20689d1d03027.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,8 +28,7 @@
 				// 全角スペースの明示
 				"mosapride.zenkaku",
 				"oderwat.indent-rainbow",
-				"usernamehw.errorlens",
-				"vmware.vscode-boot-dev-pack"
+				"usernamehw.errorlens"
             ]
             // 設定項目は.vscode/settings.jsonに記入する
         }
