--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,8 @@
 services:
   app:
-    image: mcr.microsoft.com/devcontainers/java:1-21-bullseye
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
       - .:/workspace:cached
     command: sleep infinity
