--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     - dev
   application.name: iotrobot
   datasource:
-    url: jdbc:mysql://db:3306/sensor_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/sensor_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: reader
     password: secretpass
     driver-class-name: com.mysql.cj.jdbc.Driver
