--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,4 +1,6 @@
 spring:
+  datasource:
+    url: jdbc:mysql://db:3306/sensor_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
   devtools:
     restart:
       enabled: true
