--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,10 @@
 	"service": "app",
 	"workspaceFolder": "/workspace",
 	"features": {
-		"ghcr.io/devcontainers/features/java:1": {},
+		"ghcr.io/devcontainers/features/java:1": {
+			"version": 21,
+			"installGradle": true
+		},
 		"ghcr.io/devcontainers/features/docker-outside-of-docker": {}
 	},
 	"forwardPorts": [
@@ -29,7 +32,8 @@
 				"oderwat.indent-rainbow",
 				"usernamehw.errorlens",
 				"vmware.vscode-boot-dev-pack",
-				"ms-azuretools.vscode-docker"
+				"ms-azuretools.vscode-docker",
+				"vscjava.vscode-java-test"
 			]
 			// 設定項目は.vscode/settings.jsonに記入する
 		}
