--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,16 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 
+[*.html]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+
+[*.css]
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+
 [*.java]
 indent_style = space
 indent_size = 4
